--- a/easy-dialog/src/main/res/layout/easy_dialog_progress.xml
+++ b/easy-dialog/src/main/res/layout/easy_dialog_progress.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.uowee.easy.dialog.view.EasyDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.muse.easy.dialog.view.EasyDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,4 +50,4 @@
     </RelativeLayout>
 
     <include layout="@layout/ed_stub_bottom" />
-</com.uowee.easy.dialog.view.EasyDialogLayout>
+</com.muse.easy.dialog.view.EasyDialogLayout>
