--- a/easy-dialog/src/main/res/layout/ed_stub_bottom.xml
+++ b/easy-dialog/src/main/res/layout/ed_stub_bottom.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <!--字体大小在Builder 中有默认值，默认值为17sp-->
-        <com.uowee.easy.dialog.view.EasyButton
+        <com.muse.easy.dialog.view.EasyButton
             android:id="@+id/ed_btn_neutral"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -33,7 +33,7 @@
             android:background="@color/pers10_black" />
 
 
-        <com.uowee.easy.dialog.view.EasyButton
+        <com.muse.easy.dialog.view.EasyButton
             android:id="@+id/ed_btn_negative"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -49,7 +49,7 @@
             android:background="@color/pers10_black" />
 
 
-        <com.uowee.easy.dialog.view.EasyButton
+        <com.muse.easy.dialog.view.EasyButton
             android:id="@+id/ed_btn_positive"
             android:layout_width="0dp"
             android:layout_height="match_parent"
